Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
Commit 38077562e0594a294eaf4d8e6bbd8c1c26c2540f in kernel main branch breaks the backlight on my ASUS GA605W laptop, making it stuck at maximum brightness.
On advice from Mario I updated the dcn_3_5_1_dmcub.bin from firmware git, but this made no difference.
The problematic commit was found by kernel bisect and once reverted the backlight works fine.
Designs
Child items ...
Show closed items
Linked items ...
Activity
Sort or filter
Newest first
Oldest first
Show all activity
Show comments only
Show history only
Luke Joneschanged title from {-drm/amd/display: -}Implement new backlight_level_params structure breaks backlight to {+commit +}Implement new backlight_level_params structure breaks backlight
changed title from {-drm/amd/display: -}Implement new backlight_level_params structure breaks backlight to {+commit +}Implement new backlight_level_params structure breaks backlight